# psyphy-transfer-learning

./: .gitignore  README.md  pyproject.toml
experiments/: base_run_cnn.sh
experiments/omniglot/: pp_cnn.sh
scripts/: INSTALL.md
src/: Untitled-Copy1.ipynb  crnn.py  dataset.py  main.py  new_test.ipynb  old.ipynb  prednet-reactiontime.ipynb  prednet.ipynb  psych_omniglot.ipynb  psych_prednet.py  psychloss.py  run_cnn.py  run_iam.py  run_vit.py  sam_dataset.ipynb  sam_dataset_othermodels.ipynb  train_psych_omniglot.ipynb
src/kitti_pretraining/: kitti_train.py
src/utils/: process_data.py
